deployment/gig/gig-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app_environment_id: 9c139915-ac6a-4bd9-9358-8ec230867ad3
    name: gig-api
    env_name: prod
  name: gig-api
  namespace: applications
spec:
  ports:
    - name: port-9000
      port: 9000
      targetPort: 9000
  selector:
    app_environment_id: 9c139915-ac6a-4bd9-9358-8ec230867ad3
    name: gig-api
    env_name: prod
  type: ClusterIP
